[gd_scene load_steps=7 format=3 uid="uid://cvwhdejq52cnr"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_hjaic"]
[ext_resource type="FontFile" uid="uid://bhtxfokxlbme7" path="res://VCR_OSD_MONO_1.001.ttf" id="3_5ql8c"]
[ext_resource type="Texture2D" uid="uid://bab5ii45ls8t3" path="res://pr2logo.png" id="4_0o0by"]
[ext_resource type="Script" path="res://Scenes/level_select.gd" id="4_6j5sy"]
[ext_resource type="Texture2D" uid="uid://ehl8i14gvydr" path="res://Arts/leveltns/Screenshot 2025-01-30 131258.png" id="5_tbe1v"]
[ext_resource type="Texture2D" uid="uid://bnqmrpx4px1xe" path="res://Arts/leveltns/Screenshot 2025-01-30 131611.png" id="6_3nsvy"]

[node name="Menu" type="Node3D"]

[node name="MainMenu" type="Panel" parent="."]
z_index = 5
z_as_relative = false
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hjaic")

[node name="play" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 64.0
offset_top = 464.0
offset_right = 302.0
offset_bottom = 534.0
theme_override_fonts/font = ExtResource("3_5ql8c")
theme_override_font_sizes/font_size = 28
text = "BEGIN!"

[node name="exit" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 847.0
offset_top = 456.0
offset_right = 1085.0
offset_bottom = 537.0
theme_override_fonts/font = ExtResource("3_5ql8c")
theme_override_font_sizes/font_size = 28
text = "Die"

[node name="logo" type="Sprite2D" parent="MainMenu"]
position = Vector2(80, 208)
scale = Vector2(0.194785, 0.194785)
texture = ExtResource("4_0o0by")

[node name="LevelSelect" type="Panel" parent="."]
visible = false
z_index = 5
z_as_relative = false
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_6j5sy")

[node name="TabContainer" type="TabContainer" parent="LevelSelect"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_fonts/font = ExtResource("3_5ql8c")
theme_override_font_sizes/font_size = 24
current_tab = 0

[node name="Prelude Unfettered Velocity" type="Container" parent="LevelSelect/TabContainer"]
layout_mode = 2
tooltip_text = "Prelude"
metadata/_tab_index = 0

[node name="Tutorial - 1" type="Control" parent="LevelSelect/TabContainer/Prelude Unfettered Velocity"]
layout_mode = 2

[node name="tu1" type="Button" parent="LevelSelect/TabContainer/Prelude Unfettered Velocity/Tutorial - 1"]
layout_mode = 2
offset_right = 92.0
offset_bottom = 31.0
text = "Tutorial - 1"

[node name="1secret" type="Button" parent="LevelSelect/TabContainer/Prelude Unfettered Velocity/Tutorial - 1"]
layout_mode = 2
offset_left = 120.0
offset_top = 2.0
offset_right = 177.0
offset_bottom = 33.0
text = "Secret"

[node name="Sprite2D" type="Sprite2D" parent="LevelSelect/TabContainer/Prelude Unfettered Velocity/Tutorial - 1"]
position = Vector2(88, 82)
scale = Vector2(0.306452, 0.306452)
texture = ExtResource("5_tbe1v")

[node name="Tutorial - 2" type="Control" parent="LevelSelect/TabContainer/Prelude Unfettered Velocity"]
layout_mode = 2

[node name="tu1" type="Button" parent="LevelSelect/TabContainer/Prelude Unfettered Velocity/Tutorial - 2"]
layout_mode = 2
offset_left = 216.0
offset_top = 2.0
offset_right = 308.0
offset_bottom = 33.0
text = "Tutorial - 2"

[node name="Sprite2D" type="Sprite2D" parent="LevelSelect/TabContainer/Prelude Unfettered Velocity/Tutorial - 2"]
position = Vector2(304, 82)
scale = Vector2(0.237326, 0.233709)
texture = ExtResource("6_3nsvy")

[node name="Act 1" type="Container" parent="LevelSelect/TabContainer"]
visible = false
layout_mode = 2
tooltip_text = "Prelude"
metadata/_tab_index = 1

[node name="Button" type="Button" parent="LevelSelect/TabContainer/Act 1"]
layout_mode = 2
text = "my itches ball"

[connection signal="pressed" from="MainMenu/play" to="MainMenu" method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/exit" to="MainMenu" method="_on_exit_pressed"]
[connection signal="pressed" from="LevelSelect/TabContainer/Prelude Unfettered Velocity/Tutorial - 1/tu1" to="LevelSelect" method="_on_tu_1_pressed"]
[connection signal="pressed" from="LevelSelect/TabContainer/Prelude Unfettered Velocity/Tutorial - 1/1secret" to="MainMenu" method="_on_secret_pressed"]
[connection signal="pressed" from="LevelSelect/TabContainer/Prelude Unfettered Velocity/Tutorial - 2/tu1" to="MainMenu" method="_on_tu_1_pressed"]
